# TestSeb_Dem

./: .clineignore  .clinerules  .gitignore  AUDIT_COMPLETE_FINAL_SUMMARY.md  AUDIT_PHASE2_COMPLETE.md  AUDIT_REFACTORING_AND_FEATURES.md  CLAUDE.md  CMakeLists.txt  CODE_AUDIT_REPORT.md  PROJECT_ANALYSIS.md  REFACTORING_EXAMPLE.md  WAVE1_COMPLETION_REPORT.md  _build_debug.bat  _build_debug_log_final.txt  _build_debug_log_final2.txt  _build_main_verify.bat  _build_release.bat  _run_pp1_verify.bat  atmos_integration_plan.md  cache_format_test.cache  demo_log.txt  githubCmdLine.txt  gpu_profile.cfg  particle_system_integration_plan.md  pcg_ue58_fidelity_checklist.md  roo-settings.json  run_debug_pipeline.bat  ~$at actuel du moteur.docx  État actuel du moteur.docx  🎊_AUDIT_DELIVERED.md
.agents/rules/: contextproject.md
.agents/workflows/: memoryworkflow.md  modifyexistingcode.md  workflowproject.md
.claude/: settings.json
Config/: DefaultEngine.ini  DefaultInput.ini  DefaultScalability.ini  MegaLights_Config_Report.md  MegaLights_Optimizations_Report.md
logs/archive/: _build_debug_log.txt  _build_main_after_pp1_merge.txt  build_main_incremental.txt  run_stdout5.txt
scripts/: _build_debug.bat  _build_main_verify.bat  _build_release.bat  _run_pp1_verify.bat  _run_test_pipeline.bat  _run_test_pipeline_globalsdf_fix.bat  _run_test_pipeline_megalights_adv.bat  run_debug_pipeline.bat
src/: main.cpp
src/animation/: AnimationDebugPanel.cpp  AnimationDebugPanel.h  SkeletalAnimator.cpp  SkeletalAnimator.h  animation_test.cpp
src/audio/: AudioDebugPanel.cpp  AudioDebugPanel.h  AudioEngine.cpp  AudioEngine.h  Envelope.h  Filter.h  GenerativeComposer.cpp  GenerativeComposer.h  Oscillator.h  PositionalSource.cpp  PositionalSource.h  Synth.cpp  Synth.h  audio_test.cpp
src/core/: Camera.cpp  Camera.h  EngineConfig.h  EngineConfig_Extrem.h  EngineConfig_High.h  EngineConfig_Low.h  EngineConfig_Medium.h  EngineConfig_RTX3060.h  EntityData.h  IDManager.h  InstanceRegistry.h  LoadingManager.cpp  LoadingManager.h  Logger.cpp  Logger.h  ResourcePath.cpp  ResourcePath.h  ThreadingUtil.h
src/geometry/: AsyncFileStreamer.cpp  AsyncFileStreamer.h  CacheFileManager.cpp  CacheFileManager.h  CardGenerator.cpp  CardGenerator.h  ClusterDAG.cpp  ClusterDAG.h  ClusterFormat.h  ClusterGrouping.cpp  ClusterGrouping.h  ClusterPartitioner.cpp  ClusterPartitioner.h  DecalBVH.cpp  DecalBVH.h  EntityBVH.cpp  EntityBVH.h  EntityMaterialTable.h  FallbackMeshBuilder.cpp  FallbackMeshBuilder.h  GeometryEncoding.h  GeometryHashUtil.h  GpuPageTable.cpp  GpuPageTable.h  LightBVH.cpp  LightBVH.h  MeshBakeCache.cpp  MeshBakeCache.h  MeshSDFGenerator.cpp  MeshSDFGenerator.h  MeshSimplifier.cpp  MeshSimplifier.h  ObjExport.cpp  ObjExport.h  ProceduralMaskSampler.h  StreamingRequestQueue.cpp  SurfaceCacheAtlasAllocator.cpp  SurfaceCacheAtlasAllocator.h  VirtualGeometryCacheTest.cpp  VirtualGeometryCacheTest.h
src/io/: AsyncDecompressingLoader.cpp  AsyncDecompressingLoader.h  AsyncFileStreamer.cpp  AsyncFileStreamer.h  BlockCodec.cpp  BlockCodec.h  CacheFileManager.cpp  CacheFileManager.h  ObjExport.cpp  StreamingRequestQueue.cpp  StreamingRequestQueue.h  VirtualTextureCacheFileManager.cpp  VirtualTextureCacheFileManager.h  VirtualTextureCacheFormat.h
src/pcg/: PcgAttributeSet.h  PcgBiomeRules.cpp  PcgBiomeRules.h  PcgBooleanSetOps.cpp  PcgBooleanSetOps.h  PcgCellGenerator.cpp  PcgCellGenerator.h  PcgClimateBiomeSelector.cpp  PcgClimateBiomeSelector.h  PcgDataModelSmokeTest.cpp  PcgDataModelSmokeTest.h  PcgDensityTransformFilter.cpp  PcgDensityTransformFilter.h  PcgEcosystemExclusion.cpp  PcgEcosystemExclusion.h  PcgGpuDensityNoiseNode.cpp  PcgGpuDensityNoiseNode.h  PcgGraph.cpp  PcgGraph.h  PcgGraphEvaluator.cpp  PcgGraphEvaluator.h  PcgInstanceSpawnManager.cpp  PcgInstanceSpawnManager.h  PcgMeshSpawner.cpp  PcgMeshSpawner.h  PcgNodePlugin.cpp  PcgNodePlugin.h  PcgPointData.h  PcgSeededRandom.h  PcgSelfPruningFilter.cpp  PcgSelfPruningFilter.h  PcgSlopeHeightFilter.cpp  PcgSlopeHeightFilter.h  PcgSpatialData.h  PcgSplineSampler.cpp  PcgSplineSampler.h  PcgSurfaceSampler.cpp  PcgSurfaceSampler.h  PcgTerrainSampler.cpp  PcgTerrainSampler.h  (+2 more)
src/renderer/: ATrousDenoisePass.cpp  ATrousDenoisePass.h  AccelerationStructure.cpp  AccelerationStructure.h  ClusterCullingPass.cpp  ClusterCullingPass.h  ClusterHardwareRasterPass.cpp  ClusterHardwareRasterPass.h  ClusterLODSelectionPass.cpp  ClusterLODSelectionPass.h  ClusterOcclusionCullingPass.cpp  ClusterOcclusionCullingPass.h  ClusterRenderPipeline.cpp  ClusterRenderPipeline.h  ClusterResolvePass.cpp  ClusterResolvePass.h  ClusterShadingBinPass.cpp  ClusterShadingBinPass.h  ClusterSoftwareRasterPass.cpp  ClusterSoftwareRasterPass.h  DecalTypes.h  FeedbackBuffer.cpp  FeedbackBuffer.h  GICompositePass.cpp  GICompositePass.h  GeometryDecompressionPass.cpp  GeometryDecompressionPass.h  GlobalSDFPass.cpp  (+58 more)
tests/: AsyncDecompressingLoaderTests.cpp  AsyncFileStreamerBenchmark.cpp  BlockCodecTests.cpp  CacheFileFormatTests.cpp  ClusterDAGTests.cpp  ClusterMaskSplitTests.cpp  ClusterPartitionerTests.cpp  ClusterSimplificationTests.cpp  GpuPageTableTests.cpp  HlodPipelineTests.cpp  LoadingManagerTests.cpp  MeshSDFTests.cpp  OfpaSerializationTests.cpp  PcgBiomeRulesTests.cpp  PcgBooleanSetOpsTests.cpp  PcgCellGeneratorTests.cpp  PcgCellLoaderTests.cpp  PcgClimateBiomeSelectorTests.cpp  PcgDataModelTests.cpp  PcgDensityTransformFilterTests.cpp  PcgEcosystemExclusionTests.cpp  PcgGpuNodeExecutorTests.cpp  PcgGpuTestUtils.cpp  PcgGpuTestUtils.h  PcgGraphEngineTests.cpp  PcgMeshSpawnerTests.cpp  PcgNodePluginTests.cpp  PcgSelfPruningFilterTests.cpp  PcgSlopeHeightFilterTests.cpp  PcgSplineSamplerTests.cpp  PcgSurfaceSamplerTests.cpp  PcgTerrainSamplerTests.cpp  PcgVolumeActorTests.cpp  PcgVolumeSamplerTests.cpp  RuntimeCellManifestV2Tests.cpp  SpatialHashGridTests.cpp  StreamingManagerTests.cpp  SyntheticMesh.h  VirtualTextureRenderPassTests.cpp  VirtualTextureTests.cpp
tools/: MegaLightsConverter.py  MegaLightsConverter_README.md  MegaLightsProfiler.py  MegaLights_Diagnostic_Guide.md
(+412 files in other folders)
